--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "build": "tsdx build",
     "start": "tsdx watch",
     "test": "tsdx test",
-    "prepublishOnly": "tsdx build"
+    "postinstall": "tsdx build"
   },
   "dependencies": {
     "@ethersproject/address": "^5.0.0",
