--- a/package.json
+++ b/package.json
@@ -26,13 +26,13 @@
     "@ethersproject/solidity": "^5.0.0",
     "@uniswap/sdk-core": "^3.0.0-alpha.3",
     "tiny-invariant": "^1.1.0",
-    "tiny-warning": "^1.0.3"
+    "tiny-warning": "^1.0.3",
+    "tsdx": "^0.14.1"
   },
   "devDependencies": {
     "@types/big.js": "^4.0.5",
     "@types/jest": "^24.0.25",
-    "@uniswap/v2-core": "^1.0.1",
-    "tsdx": "^0.14.1"
+    "@uniswap/v2-core": "^1.0.1"
   },
   "engines": {
     "node": ">=10"
