--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
   "files": [
-    "dist"
+    "dist/index.js"
   ],
   "repository": "https://github.com/NiiFi/godzilla2-sdk.git",
   "keywords": [
