--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@niifi/godzilla2-sdk",
   "license": "MIT",
-  "version": "0.1.3",
+  "version": "0.0.6",
   "description": "An SDK for building applications on top of NiiFi",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -15,7 +15,7 @@
   ],
   "module": "dist/v2-sdk.esm.js",
   "scripts": {
-    "lint": "tsdx lint src test",
+    "lint": "tsdx lint src",
     "build": "tsdx build",
     "start": "tsdx watch",
     "test": "tsdx test",
