npm added to package.json

--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "dist/index.js"
   ],
   "repository": "https://github.com/NiiFi/godzilla2-sdk.git",
+  "publishConfig": {
+    "registry":"https://npm.pkg.github.com"
+  },
   "keywords": [
     "niifi",
     "ethereum"
