--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -26,8 +26,8 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: 14
-          registry-url: https://npm.pkg.github.com/
+          registry-url: https://registry.npmjs.org/
       - run: yarn install --frozen-lockfile
       - run: npm publish --access=public
         env:
-          NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
+          NODE_AUTH_TOKEN: ${{NPM_PUBLISH}}
