--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -30,4 +30,4 @@ jobs:
       - run: yarn install --frozen-lockfile
       - run: npm publish --access=public
         env:
-          NODE_AUTH_TOKEN: ${{NPM_PUBLISH}}
+          NODE_AUTH_TOKEN: ${{secrets.NPM_PUBLISH}}
