--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@niifi/godzilla2-sdk",
   "license": "MIT",
-  "version": "0.0.14",
+  "version": "0.0.15",
   "description": "An SDK for building applications on top of NiiFi",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -26,6 +26,7 @@
     "@ethersproject/solidity": "^5.0.0",
     "@types/big.js": "^4.0.5",
     "@types/jest": "^24.0.25",
+    "big.js": "^5.2.2",
     "decimal.js-light": "^2.5.0",
     "jsbi": "^3.1.4",
     "tiny-invariant": "^1.1.0",
