Add types for RUNTIME config

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,7 @@
       "*": ["src/*", "node_modules/*"]
     },
     "esModuleInterop": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "typeRoots": ["./node_modules/@types", "./src/types"]
   }
 }
